------------------------------------------------------------------------
r142 | draeger1 | 2013-08-29 12:06:38 -0700 (Thu, 29 Aug 2013) | 4 lines


Fixed bug in EmpiricalPotentialCmd where arguments were being passed to EmpiricalPotential in wrong order.


------------------------------------------------------------------------
r141 | draeger1 | 2013-08-28 13:20:52 -0700 (Wed, 28 Aug 2013) | 4 lines


Added support for atoms_dyn IMPULSIVE (constant velocities) with BOSampleStepper.


------------------------------------------------------------------------
r140 | draeger1 | 2013-08-26 15:05:04 -0700 (Mon, 26 Aug 2013) | 4 lines


Added if statements to avoid hangs/crashes with very large nrowmax values, where the number of G-vectors in the basis is on the order of nrowmax.  Fixed paropt command, tested successfully with mgo480 and 8k-32k MPI tasks on vulcan.


------------------------------------------------------------------------
r139 | draeger1 | 2013-08-23 17:09:49 -0700 (Fri, 23 Aug 2013) | 4 lines


Implemented nspin > 1 for save -casino.


------------------------------------------------------------------------
r138 | draeger1 | 2013-08-23 12:22:07 -0700 (Fri, 23 Aug 2013) | 4 lines


Updated HPC_BENCHMARK readme file to give more explicit details for CORAL and Trinity benchmarks.


------------------------------------------------------------------------
r137 | draeger1 | 2013-08-21 10:15:29 -0700 (Wed, 21 Aug 2013) | 4 lines


Added barriers after Alltoallv calls in FourierTransform to prevent them from causing performance bottleneck for some grids and nrowmax values.


------------------------------------------------------------------------
r136 | draeger1 | 2013-08-20 10:11:12 -0700 (Tue, 20 Aug 2013) | 4 lines


After extensive testing, reimplemented change to col_ctxt creation:  it should just reduce memory costs associated with creating new BLACS contexts repeatedly vs. simply passing references.

